--- a/bmtour.html
+++ b/bmtour.html
@@ -10,7 +10,7 @@
       Author: Morgan Kennedy
       Date:   2.1.17
 
-      Filename:         bmtour.htm
+      Filename:         bmtour.html
       Supporting files: mwlogo.png,
    -->
 
@@ -32,7 +32,7 @@
       <nav>
          <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Learn More</a></li>
+            <li><a href="learn.html">Learn More</a></li>
             <li><a href="#">Testimonials</a></li>
             <li><a href="#">Route Maps</a></li>
             <li><a href="#">Register</a></li>
